--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ cmake_minimum_required (VERSION 3.8)
 project ("IPK")
 
 # Add source to this project's executable.
-add_executable (IPK "IPK.cpp"  "IPK.h")
+add_executable (IPK "IPK.cpp"  "Common.h" "Response.cpp" "Server.cpp" "Client.cpp" "Packet.cpp" "Packet.h" "Server.h" "Response.h" "Client.h")
 
 # TODO: Add tests and install targets if needed.
