--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -11,7 +11,15 @@
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
       "inheritEnvironments": [ "linux_x64" ],
-      "wslPath": "${defaultWSLPath}"
+      "wslPath": "${defaultWSLPath}",
+      "intelliSenseMode": "linux-gcc-x64",
+      "variables": [
+        {
+          "name": "CMAKE_CXX_FLAGS_DEBUG",
+          "value": "-g -Werror",
+          "type": "STRING"
+        }
+      ]
     }
   ]
 }
